--- a/styles/imports/variables.css
+++ b/styles/imports/variables.css
@@ -4,8 +4,8 @@
   --light-font-color: #ffffff;
   --color-1: #61ccd9;
   --color-2: #90aa7a;
-  --color-3: #eca33b;
-  --rain-color: #f9f4ed;
+  --color-3: #fa734d;
+  --rain-color: #F7E4DF;
   --museum-color: #e3f7ff;
   --bug-color: #e5f8e6;
   /*------COLOUR VARIABLES-------*/
