updated rainydays project info

--- a/styles/imports/variables.css
+++ b/styles/imports/variables.css
@@ -5,7 +5,7 @@
   --color-1: #61ccd9;
   --color-2: #90aa7a;
   --color-3: #fa734d;
-  --rain-color: #F7E4DF;
+  --rain-color: #f7e4df;
   --museum-color: #e3f7ff;
   --bug-color: #e5f8e6;
   /*------COLOUR VARIABLES-------*/
