--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,16 @@ body {
 h1,
 h2 {
   font-family: var(--heading-font);
+  text-align: center;
+}
+
+h4 {
+  margin-bottom: 0rem;
+  margin-top: 1.5rem;
+}
+
+p {
+  margin-top: 0rem;
 }
 
 a {
