--- a/styles/imports/variables.css
+++ b/styles/imports/variables.css
@@ -9,6 +9,6 @@
   --museum-color: #e3f7ff;
   --bug-color: #e5f8e6;
   /*------COLOUR VARIABLES-------*/
-  --heading-font: "Koh Santepheap", cursive;
+  --heading-font: "Raleway", sans-serif;
   --paragraph-font: "Open Sans", sans-serif;
 }
