--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -7,10 +7,6 @@
     flex-wrap: wrap;
   }
 
-  .project-section {
-    padding: 20px;
-  }
-
   .list_container {
     margin: 0px;
     min-height: 560px;
@@ -41,6 +37,24 @@
     grid-template-columns: 1fr 5fr;
     max-width: 1000px;
     margin: 0 auto;
+  }
+
+  header {
+    min-height: 70vh;
+  }
+
+  .link-container {
+    padding: 0px 20px 20px 20px;
+  }
+
+  .product-preview {
+    padding: 0px 20px 0px 20px;
+  }
+
+  .laptop {
+    grid-column: 2 / 5;
+    grid-row: 1 / 4;
+    justify-content: start;
   }
 
   .buttons_container {
