--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,18 @@ h2 {
   text-align: center;
 }
 
+h2 {
+  display: inline-block;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: var(--dark-font-color);
+  color: var(--light-font-color);
+  border-radius: 20px;
+  font-size: 2.5rem;
+}
+
 h4 {
+  font-family: var(--heading-font);
   margin-bottom: 0rem;
   margin-top: 1.5rem;
 }
@@ -28,18 +39,88 @@ a {
   color: var(--dark-font-color);
 }
 
+header {
+  min-height: 50vh;
+  position: relative;
+  background-image: url("../images/desk.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-blend-mode: saturation;
+  color: var(--light-font-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+header::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 0.7;
+}
+
+header h1 {
+  margin-top: 20px;
+  z-index: 100;
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+header p {
+  z-index: 100;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
 .project-link {
-  font-family: var(--heading-font);
   color: var(--link-font-color);
   text-decoration: none;
+  margin: 0 auto;
 }
 
 .product-preview {
   display: grid;
-  grid-template-columns: 2.5fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 0.5fr;
   align-items: end;
   justify-items: center;
   padding: 20px 20px 0px 20px;
+}
+
+.laptop {
+  grid-column: 1 / 6;
+  grid-row: 1 / 3;
+  justify-content: start;
+}
+
+.ipad {
+  grid-column: 1 / 3;
+  grid-row: 2 / 5;
+}
+
+.phone {
+  grid-column: 4 / 6;
+  grid-row: 2 / 5;
+}
+
+.link-container {
+  background: var(--light-font-color);
+  border-radius: 20px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.link-container a {
+  font-family: var(--heading-font);
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-top: 20px;
+}
+
+.link-container:hover {
+  transform: scale(1.01);
+  transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .information_container {
@@ -47,8 +128,13 @@ a {
 }
 
 .project-section {
-  padding: 0px;
+  padding: 20px;
   margin: none;
+  text-align: center;
+}
+
+.project-section > div {
+  text-align: center;
 }
 
 .project-one {
@@ -144,6 +230,7 @@ a {
   margin: -700px 0px -110px 0px;
   overflow: hidden;
   position: relative;
+  text-align: left;
 }
 
 .information_container li {
@@ -182,6 +269,9 @@ a {
 .proj-3_close-button::after {
   font-size: 1.5rem;
   margin-left: 1rem;
+  background: var(--light-font-color);
+  padding: 5px 8px;
+  border-radius: 50%;
 }
 
 .proj-1_next-button::after,
@@ -207,6 +297,11 @@ a {
   font-size: 1.1rem;
   cursor: pointer;
   margin-bottom: 10px;
+  border-radius: 5px;
+  color: var(--dark-font-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .proj-1_next-button:hover,
@@ -221,15 +316,18 @@ a {
 
 .proj-1_next-button,
 .proj-1_close-button {
-  border: solid 2px var(--color-3);
+  border: solid 1px var(--color-3);
+  background-color: var(--color-3);
 }
 
 .proj-2_next-button,
 .proj-2_close-button {
-  border: solid 2px var(--color-1);
+  border: solid 1px var(--color-1);
+  background-color: var(--color-1);
 }
 
 .proj-3_close-button,
 .proj-3_next-button {
-  border: solid 2px var(--color-2);
+  border: solid 1px var(--color-2);
+  background-color: var(--color-2);
 }
