last updates and github links

--- a/styles/imports/variables.css
+++ b/styles/imports/variables.css
@@ -2,12 +2,12 @@
   /*------COLOUR VARIABLES-------*/
   --dark-font-color: #0d0000;
   --light-font-color: #ffffff;
-  --color-1: #61ccd9;
-  --color-2: #90aa7a;
-  --color-3: #fa734d;
-  --rain-color: #f7e4df;
-  --museum-color: #e3f7ff;
-  --bug-color: #e5f8e6;
+  --color-1: #61CCD9;
+  --color-2: #5CE6A5;
+  --color-3: #60BBF0;
+  --rain-color: #c2e4f8;
+  --museum-color: #c4dde0;
+  --bug-color: #d4fce9;
   /*------COLOUR VARIABLES-------*/
   --heading-font: "Raleway", sans-serif;
   --paragraph-font: "Open Sans", sans-serif;
